<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OurChurch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open_google_maps">Open in Google Maps</string>
    <string name="action_settings">Settings</string>
    <string name="action_restart">Restart</string>
    <string name="signIn">Sign Up/Login</string>
    <string name="signout">Sign Out</string>
    <string name="show_hours">Schedules</string>
    <string name="btn_insert_hours">Insert Hours</string>
    <string name="mass_schedules">Mass Schedules</string>
    <string name="confession_schedules">Confession Schedules</string>
    <string name="other_schedules">Other Schedules</string>
    <string name="btnRegisterSchedules">Register</string>
    <string name="OtherDescription">Enter a time along with a description</string>
    <string name="schedules_sure">Enter the schedules that you are sure</string>
</resources>